# zerotwo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  pyproject.toml  setup.cfg
.github/: dependabot.yml
config/: application.yml  docker-compose.yml  example-config.json  zerotwo.service
zerotwo/: bot.py  extensions.py
zerotwo/cogs/: admin.py  cog_template.py  error_handler.py  extension_handler.py  generic.py  info.py  moderation.py  music.py  quote.py  spotify.py  status.py
zerotwo/cogs/utils/: bot_stats.py  embed_builder.py  user_utils.py
