[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "zerotwo"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "*"
wavelink = "*"
jishaku = "*"
aiodns = "*"
cchardet = "*"
uvloop = {version = "*", platform = "linux"}
psutil = "*"
brotli = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
pep8-naming = "*"
bandit = "*"
black = {version = "*", allow-prereleases = true}
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
