[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "zerotwo"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"
wavelink = "^0.9.6"
jishaku = "^1.20.0"
aiodns = "^2.0.0"
Brotli = "^1.0.9"
cchardet = "^2.1.7"
uvloop = "^0.14.0"
psutil = "^5.7.3"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-comprehensions = "^3.3.0"
pep8-naming = "^0.11.1"
bandit = "^1.7.0"
black = "^20.8b1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
